feat: add support for integer IDs in JSON-RPC messages

--- a/src/main/resources/messages/LanguageServerBundle.properties
+++ b/src/main/resources/messages/LanguageServerBundle.properties
@@ -67,6 +67,7 @@ action.language.server.error.show.logs.text=Show Logs
 language.server.trace=Trace:
 language.server.debug.port=Debug port:
 language.server.debug.suspend=Suspend and wait for a debugger?
+language.server.use.integer.ids=Use integer IDs for JSON-RPC messages
 
 language.server.action.add=Add Language server
 language.server.action.remove=Remove selected Language server(s)
